--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
 
             <div id="away" class="team-info">
-                <h3 id="awayName">GUEST</h3>
+                <h3 id="awayName">AWAY</h3>
                 <div class="score">
                     <div id="awayBP" class="score-icons">Bonus Point</div>
                     <button id="awaySB" class="score-icons" onclick="sinBinClock(this.id)">Sin Bin</button>
